--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,6 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 70%;
-  height: 100%;
   background-color: transparent;
   margin: 15px;
 }
@@ -32,6 +31,7 @@ h1 {
   width: 30%;
   height: 100%;
   border: 2px solid #C0C0C0;
+  position: relative;
 }
 .logo{
   width: 200px;
@@ -58,4 +58,39 @@ h1 {
 }
 .title{
   margin-left:15px;
+}
+.input-group{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-top: 2px solid #C0C0C0;
+}
+.form_group{
+  display: flex;
+  flex-direction: row;
+}
+input[type=text], select {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 5px;
+}
+
+input[type=submit] {
+  width: 20%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
 }
