--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,23 +25,21 @@ h1 {
   background-color: transparent;
   margin: 15px;
 }
-
-.right_container{
-  background-color: #ffffff;
-  width: 30%;
-  height: 100%;
-  border: 2px solid #C0C0C0;
-  position: relative;
-}
 .logo{
   width: 200px;
 }
 .ticket_container{
   width: 100%;
-  height: 250px;
+  height: 50%;
   background-color:rgba(192,192,192,.80);
   margin-top: 100px;
   border: 2px solid #ffffff;
+}
+.ticket_body{
+  overflow-y: auto;
+  width: 100%;
+  height: 87%;
+  color: #ffffff;
 }
 .section_header{
   width: 100%;
@@ -53,11 +51,61 @@ h1 {
   flex-direction: column;
   justify-content: center;
 }
+
 #chat_header{
   border-bottom-color: #C0C0C0;
 }
 .title{
   margin-left:15px;
+  font-weight: bold;
+}
+
+/* Accordian Styles */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 10px 0 10px 0;
+  width: 100%;
+  border-bottom: 2px solid #ffffff;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+  border-bottom: 2px solid #ffffff;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  color: #000000;
+}
+/* Accordian Styles */
+
+/* Table Styles */
+table{
+  table-layout: fixed;
+  width: 100%;
+}
+
+tr{
+  text-align: center;
+}
+/* Table Styles */
+
+.right_container{
+  background-color: #ffffff;
+  width: 30%;
+  height: 100%;
+  border: 2px solid #C0C0C0;
+  position: relative;
 }
 .input-group{
   position: absolute;
@@ -78,11 +126,10 @@ input[type=text], select {
   box-sizing: border-box;
   margin: 5px;
 }
-
 input[type=submit] {
   width: 20%;
-  background-color: #4CAF50;
-  color: white;
+  background-color: #C0C0C0;
+  color: #000000;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -90,7 +137,7 @@ input[type=submit] {
   cursor: pointer;
   margin: 5px;
 }
-
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #707070;
+  color: #ffffff;
 }
