--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,12 +62,12 @@ h1 {
 
 /* Accordian Styles */
 .accordion {
-  background-color: #eee;
+  background-color: #ffffff;
   color: #444;
   cursor: pointer;
   padding: 10px 0 10px 0;
   width: 100%;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #eee;
   text-align: left;
   outline: none;
   font-size: 15px;
@@ -75,8 +75,9 @@ h1 {
 }
 
 .active, .accordion:hover {
-  background-color: #ccc;
+  background-color: #eee;
   border-bottom: 2px solid #ffffff;
+  color: #ffffff
 }
 
 .panel {
