--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,12 +62,12 @@ h1 {
 
 /* Accordian Styles */
 .accordion {
-  background-color: #ffffff;
+  background-color: #eee;
   color: #444;
   cursor: pointer;
   padding: 10px 0 10px 0;
   width: 100%;
-  border-bottom: 2px solid #eee;
+  border-bottom: 2px solid #ffffff;
   text-align: left;
   outline: none;
   font-size: 15px;
@@ -75,9 +75,8 @@ h1 {
 }
 
 .active, .accordion:hover {
-  background-color: #eee;
+  background-color: #ccc;
   border-bottom: 2px solid #ffffff;
-  color: #ffffff
 }
 
 .panel {
@@ -88,7 +87,6 @@ h1 {
   transition: max-height 0.2s ease-out;
   color: #000000;
 }
-/* Accordian Styles */
 
 /* Table Styles */
 table{
@@ -99,7 +97,6 @@ table{
 tr{
   text-align: center;
 }
-/* Table Styles */
 
 .right_container{
   background-color: #ffffff;
