--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,8 +128,8 @@ input[type=submit] {
   width: 20%;
   background-color: #C0C0C0;
   color: #000000;
-  padding: 14px 20px;
-  margin: 8px 0;
+  /* padding: 14px 20px; */
+  /* margin: 8px 0; */
   border: none;
   border-radius: 4px;
   cursor: pointer;
