Setting up the template and basic assets for flask

--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -4,14 +4,14 @@
 <head>
     <title>InnoVAtor</title>
     <link href="http://allfont.net/allfont.css?fonts=cicle-gordita" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="static/assets/css/styles.css">
 </head>
 
 <body>
     <div class="container">
         <section class="left_container">
             <div class="logoDiv">
-                <img class="logo" src="assets/MixLogo_1x.png" alt="Innovation Logo">
+                <img class="logo" src="static/assets/MixLogo_1x.png" alt="Innovation Logo">
             </div>
             <div class="ticket_container">
                 <div class="section_header">
