--- a/flask-app/static/assets/css/styles.css
+++ b/flask-app/static/assets/css/styles.css
@@ -13,7 +13,7 @@ h1 {
     justify-content: center;
     align-self: center;
     height: 100vh;
-    background-image: url("/assets/Mix_bg.png");
+    background-image: url("../Mix_bg.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
