--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,13 @@
 body{
   margin:0;
-  font-family: 'Cicle Gordita', arial;
+  /* font-family: 'Cicle Gordita', arial; */
+  font-family: 'News Cycle', sans-serif;
 }
 h1 {
   color: #ffffff;
+}
+button {
+  font-family: 'News Cycle', sans-serif;
 }
 .container{
   display: flex;
@@ -48,8 +52,30 @@ h1 {
   border-bottom: 2px solid #ffffff;
   color: #ffffff;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_right {
+  padding-right: 5px; 
+}
+
+.section_minimize, .section_close {
+  border: none; 
+  color: white; 
+  background-color: transparent;
+  font-size: 1.25em; 
+  cursor: pointer;
+}
+
+.section_minimize {
+  margin-right: 0.25em;
+  transform: rotate(90deg);
+}
+
+.right_container.minimize .section_minimize {
+  transform: rotate(-90deg); 
 }
 
 #chat_header{
@@ -101,12 +127,33 @@ tr{
 .right_container{
   background-color: #ffffff;
   width: 30%;
-  height: 100%;
   border: 2px solid #C0C0C0;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
-.input-group{
+.right_container.minimize {
   position: absolute;
+  right: 0; 
+  bottom: 0; 
+}
+.right_container.minimize .text_container, 
+.right_container.minimize .input-group
+{
+  display: none;
+}
+
+.right_container.close {
+  display: none; 
+}
+
+.text_container {
+  position: relative;
+  height: 100%; 
+}
+
+.input-group{
+  position: relative;
   bottom: 0;
   width: 100%;
   border-top: 2px solid #C0C0C0;
