--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,11 +23,13 @@ button {
 }
 
 .left_container{
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  background-color: transparent;
+  width: 100%;
   margin: 15px;
+}
+
+.logoDiv{
+  width: 100%;
+  height: 50px;
 }
 .logo{
   width: 200px;
